--- a/code/style.css
+++ b/code/style.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    background: linear-gradient(25deg, #fb3222,#b40000,#890000,	#540000, #5e1712, #240000);
+    background: linear-gradient(45deg, #fb3222,#b40000,#890000,	#540000, #5e1712, #240000);
     color: #fff;
     font-family: "Titillium Web", "Helvetica Neue", "Helvetica", Arial, sans-serif;
     margin: 0;
@@ -125,7 +125,7 @@ nav {
 
 .big-news-card{
     width:100%;
-    height: 350px;
+    height: 300px;
     margin: 0px 16px 0 16px 0;
     padding:0;
     background-color: #fff;
@@ -147,16 +147,29 @@ nav {
        
 }
 
-.news-text{
-    flex: 1;
-    height: 50px;
-    font-size: 15px;
+.news-article{
+    font-size: 16px;
     text-align: center;
-
-
+    height: 15%;
+    position: relative;
+    display:flex;
+    justify-content: center;
 }
 
-.news-text:hover{
+.news-header{
+    padding: 5px;
+    margin:0;
+    line-height: 30px;
+    font-size: 22px;
+}
+
+.news-text{
+    padding-top: 15px;
+    margin:0;
+    display:none;
+}
+
+.news-article:hover{
     text-decoration: underline;
     color: dimgray;
 }
@@ -186,14 +199,20 @@ nav {
 
 .sub-news-card .news-image{
     width: 100%;
-    flex-grow: 1;
    
+}
+
+.sub-news-header{
+    padding: 5px;
+    margin:0;
+    line-height: 30px;
+    font-size: 22px;
 }
 
 
 /*** Footer ***/
 
-footer {
+.footer {
     background: #2a2c36;
     color: #fff;
     height: 50px;
@@ -201,6 +220,7 @@ footer {
     text-align: center;
     padding-top: 12px;
     font-size: 14px;
+
 }
 
 
@@ -220,12 +240,12 @@ nav {
 }
 
 header img {
-    margin-right: 16px;
+    margin-right: 30px;
 }
 
 .logo {
     font: 35px bold;
-    padding: 0 10px;
+    padding: 0 10px 0 30px;
     white-space: nowrap;
     display:flex;
 }
@@ -248,22 +268,36 @@ header img {
 }
 
 .big-news-card {
-    width: 45%;
+    height:340px;
+    width: 48%;
     margin-bottom: 32px;    
+    position: relative;
+}
+
+.news-text{
+    display:block;
+    position:absolute;
+    top:22px;
+    line-height: 20px;
 }
 
 .sub-news-container {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    padding-top: 32px;
+    
 }
-
 
 .sub-news-card {
     width: 22.5%;
-    margin-bottom: 32px;    
+    height: 195px;
 }
+
+.sub-news-header{
+    font-size: 16px;
+    line-height: 18px;
+}
+
 
 }
 
@@ -291,12 +325,20 @@ header img {
     width: 22.5%;
 }
 
-.sub-news-container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.news-header{
+    font-size: 22px;
+    line-height: 25px;
+}
+
+.news-text{
+    display: none;
+}
+
+.big-news-card{
+    height: 300px;
     
 }
+
 
 .sub-news-card {
     width: 16%;
