--- a/code/style.css
+++ b/code/style.css
@@ -40,7 +40,7 @@ html {
     padding: 10px;
   }
   
-/*big news (main) layout*/
+/*big news and main layout*/
 .main {
   background-color: #C5E3D5;
   padding: 10px 0 10px 0;
@@ -198,6 +198,7 @@ html {
     text-align: center;
     font-size: 20px;
   }
+  
   #big-news-p {
     font-size: 14px;
   }
