Added remaining images and h2 text for news-items

--- a/code/style.css
+++ b/code/style.css
@@ -163,6 +163,7 @@ nav {
 
 .news-img {
   width: 100%;
+  
 }
 
 .news-item-text {
@@ -280,6 +281,10 @@ nav {
     margin: 15px;
   }
 
+  .news-item-text h2 {
+    font-size: 19px;
+  }
+
   .interview-headline {
     font-size: 40px;
   }
@@ -346,6 +351,14 @@ nav {
 
   .news-item {
     width: 23%;
+  }
+
+  .news-item-text {
+    margin-bottom: 15px;
+  }
+
+  .news-item-text h2 {
+    font-size: 20px;
   }
 
   .interview-headline {
