--- a/code/style.css
+++ b/code/style.css
@@ -157,16 +157,29 @@ nav{
   margin: 10px;
 }
 
+.mainarticle{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.img-artist{
+  width: 50%;
+}
+.big-news{
+  width: 50%;
+}
 /*artist cards*/
   
 /*fonts*/
 .author{
-  font-size: 20px;
+  font-size: 18px;
+  margin-top: 5px;
 }
 
 .p-mainarticle{ 
-  font-size: 25px;
+  font-size: 22px;
   padding: 15px;
+  margin-bottom: 10px;
 }
 
 h1{ 
@@ -175,15 +188,15 @@ h1{
 } 
 
 h2{
-  font-size: 50px;
-  text-align: center;
+  font-size: 60px;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 h3{
 margin-top: 0px;
 font-size: 30px;
+}
 }
 
 @media (min-width: 992px) and (max-width: 1199px){
